force-app/main/default/objects/TriggerHandlers__mdt/TriggerHandlers__mdt.object-meta.xml
<CustomObject>
    <label>TriggerContoller</label>
    <pluralLabel>TriggerController</pluralLabel>
</CustomObject>