force-app/main/default/objects/TriggerHandlers__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <description>Order that trigger controller should run in Called in Ascending order.</description>
    <label>Execution Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>