force-app/main/default/objects/TriggerHandlers__mdt/fields/SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Type__c</fullName>
    <description>Type of object the trigger is called on</description>
    <label>SObject Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>